Ajuste na documentação
